--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "lodash": "^4.17.20",
+    "vue": "^3.0.0-rc.1",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
+    "vite": "^1.0.0-rc.1"
   }
 }
