--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "tarfin-task",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "test:unit": "vue-cli-service test:unit",
+    "dev": "vite"
   },
   "dependencies": {
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "vue": "^3.0.0-rc.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
+    "@vue/cli-service": "^4.5.11",
     "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "@vue/test-utils": "^2.0.0-beta.14",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
-    "vite": "^1.0.0-rc.1"
+    "typescript": "~3.9.3",
+    "vite": "^1.0.0-rc.1",
+    "vue-jest": "^5.0.0-alpha.7"
   }
 }
